fix word wrapping on long strings in firefox

--- a/raftcat/static/raftcat.css
+++ b/raftcat/static/raftcat.css
@@ -5,7 +5,8 @@
 
 pre {
   white-space: pre-wrap;
-  word-break: keep-all
+  overflow-wrap: break-word;
+  word-break: break-all
 }
 
 body{
